main.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: monospace;
  color: white;
}

li {
  list-style: none;
}

#p5-container {
  width: 100%;
  height: 100vh;
}

#p5-audio-container {
  position: absolute;
  bottom: 0;
  left: 0;
}

#hud {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 10;
  padding: 20px;
  background-color: rgba(0, 0, 0, 0.5);
}

#hud-left {
  display: inline-block;
  color: white;
}

#hud-right {
  display: inline-block;
  color: #9c9c9c;
}

.controls {
  margin-top: 15px;
}

.transport-control {
  border: none;
  font-family: monospace;
  color: white;
  padding: 9px;
  background-color: #0c0c0c;
}

.transport-control:hover {
  cursor: pointer;
  background-color: #1c1c1c;
}

.instructions-container {
  position: absolute;
  top: 0;
  right: 0;
  padding: 20px;
  background-color: rgba(0, 0, 0, 0.5);
}

.instructions {
  color: #9c9c9c;
  margin-bottom: 3px;
}

.instruction-heading {
  color: white;
}

.links-container {
  position: absolute;
  z-index: 10;
  bottom: 30px;
  right: 50%;
  transform: translate(50%, 50%);
}

.links-container a {
  text-decoration: none;
  color: white;
  font-size: calc(10px + 0.25vw);
  padding: calc(2px + 1vw);
}

.links-container a:hover {
  background-color: #3c3c3c;
  color: #9c9c9c;
  cursor: pointer;
}

#volume-container {
  margin-top: 15px;
  display: flex;
  align-items: center;
}

#volume-slider {
  width: 50%;
  margin-left: 20px;
}

input[type="range"].slider {
  -webkit-appearance: none;
  width: 100%;
  margin: 7px 0;
}
input[type="range"].slider:focus {
  outline: none;
}
input[type="range"].slider::-webkit-slider-runnable-track {
  width: 100%;
  height: 1px;
  cursor: pointer;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
  background: #0f0f0f;
  border-radius: 0px;
  border: 0px solid rgba(1, 1, 1, 0);
}
input[type="range"].slider::-webkit-slider-thumb {
  box-shadow: 0px 0px 0px #677781, 0px 0px 0px #73848f;
  border: 0px solid #000000;
  height: 15px;
  width: 15px;
  border-radius: 0px;
  background: #ffffff;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -7px;
}
input[type="range"].slider:focus::-webkit-slider-runnable-track {
  background: #424242;
}
input[type="range"].slider::-moz-range-track {
  width: 100%;
  height: 1px;
  cursor: pointer;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
  background: #0f0f0f;
  border-radius: 0px;
  border: 0px solid rgba(1, 1, 1, 0);
}
input[type="range"].slider::-moz-range-thumb {
  box-shadow: 0px 0px 0px #677781, 0px 0px 0px #73848f;
  border: 0px solid #000000;
  height: 15px;
  width: 15px;
  border-radius: 0px;
  background: #ffffff;
  cursor: pointer;
}
input[type="range"].slider::-ms-track {
  width: 100%;
  height: 1px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
input[type="range"].slider::-ms-fill-lower {
  background: #000000;
  border: 0px solid rgba(1, 1, 1, 0);
  border-radius: 0px;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
}
input[type="range"].slider::-ms-fill-upper {
  background: #0f0f0f;
  border: 0px solid rgba(1, 1, 1, 0);
  border-radius: 0px;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
}
input[type="range"].slider::-ms-thumb {
  box-shadow: 0px 0px 0px #677781, 0px 0px 0px #73848f;
  border: 0px solid #000000;
  height: 15px;
  width: 15px;
  border-radius: 0px;
  background: #ffffff;
  cursor: pointer;
  height: 1px;
}
input[type="range"].slider:focus::-ms-fill-lower {
  background: #0f0f0f;
}
input[type="range"].slider:focus::-ms-fill-upper {
  background: #424242;
}

@media (max-width: 880px) {
  .instructions-container {
    top: 200px;
    left: 0;
  }
}

@media (max-width: 540px) {
  #hud {
    padding: 5px;
  }

  .instructions-container {
    top: 138px;
    top: auto;
    bottom: 0;
    padding: 10px;
  }

  .links-container {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    padding: 10px;
    bottom: 0;
    right: 0;
    transform: translate(0, 0);
  }

  .links-container a:not(:last-child) {
    margin-bottom: 10px;
  }
}

@media (max-width: 500px) {
  #hud,
  .instructions-container {
    font-size: calc(5px + 0.9vw);
  }
}

